Wed Jul 19 17:38:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

        * Replace om_inttostring and doubletostring by (overloaded)
	  om_tostring methods.  Implement for several other types.

	* Redo om_ostringstream class so that it is self contained, and
	  doesn't depend on the system's streambuf; hopefully enabling
	  us to get debugging output in multithreaded situations...

Wed Jul 19 17:35:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The Java apitest now correctly runs test_pctcutoff1, with either
	  the sleepy or inmemory backend.

Wed Jul 19 15:59:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added get_description to Java OmMSet wrapper.

Wed Jul 19 11:17:00 BST 2000 Olly Betts

	* backends/sleepy/dir_contents: updated information about sleepycat
	  backend.

Tue Jul 18 19:14:45 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The beginnings of a Java apitest.  One test implemented, which
	  doesn't seem to work.  Updates to BackendManager and a few
	  related bits.

Tue Jul 18 18:48:05 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change threadtests output so that it doesn't use om_stringstream.

Tue Jul 18 17:12:49 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Debug system now prints out the (currently numeric) debug type
	  before the output, to make it easier to tune OM_DEBUG_TYPES

	* OM_DEBUG_TYPES=0 now means no debugging output, instead of all.

Mon Jul 17 19:35:05 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The testsuite now has improved reporting of test failures.  It
	  tells you whether it was an exception, a normal fail, or a
	  memory leak (and some combinations).

	* Solaris portability tweaks.

Mon Jul 17 19:13:13 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* BackendManager now working from Java, at least for sleepy databases.

Sat Jul 15 11:05:00 BST 2000 Olly Betts

	* Updated AUTHORS file
